# 2avaracivel-cariacica-website

./: .env.example  .gitignore  .replit  ACCESSIBILITY_COMPLIANCE_REPORT.md  ACCESSIBILITY_UPDATE_REPORT.md  API_DOCUMENTATION.md  API_INTEGRATION_STATUS_REPORT.md  API_REFERENCE.md  ASYNC_IMPLEMENTATION_COMPLETE.md  ASYNC_PERFORMANCE_DEMONSTRATION.md  CHATBOT_DEPLOYMENT_READY.md  CHATBOT_STATUS_REPORT.md  COMPLETE_SYSTEM_VERIFICATION_REPORT.md  CONTRAST_READABILITY_IMPROVEMENTS_COMPLETE.md  CUSTOM_ICON_GOOGLE_MAPS_IMPLEMENTATION_COMPLETE.md  DEBUG_FINAL_REPORT.md  DEPLOYMENT_GUIDE.md  ERROR_LOGGING_IMPLEMENTATION_COMPLETE.md  FINAL_APP_TEST_REPORT.md  FINAL_CONTRAST_ACCESSIBILITY_REPORT.md  FINAL_DOCUMENTATION_INDEX.md  FINAL_OPTIMIZATION_REPORT.md  FINAL_SYSTEM_STATUS.md  FRONTEND_INTEGRATION_COMPLETE.md  FULL_APPLICATION_TEST_REPORT.md  GITHUB_SETUP_GUIDE.md  ICON_DESIGN_ACCESSIBILITY_FIXES_COMPLETE.md  ICON_DISPLAY_FIXES_SUMMARY.md  INTEGRATION_DEBUG_COMPLETE_REPORT.md  INTEGRATION_UPDATE_SUMMARY.md  LICENSE  OPTIMIZATION_COMPLETE_REPORT.md  PERFORMANCE_OPTIMIZATION_FINAL.md  PROJECT_SUMMARY.md  README.md  ROBUST_INTEGRATION_REPORT.md  SECURITY_STATUS_REPORT.md  SISTEMA_ATUALIZADO_2025.md  SYSTEM_DEPENDENCIES_GUIDE.md  SYSTEM_DOCUMENTATION.md  (+36 more)
attached_assets/avara_website_modernizado/: CHANGELOG.md  DEPLOYMENT_GUIDE.md  MANIFEST.md  documentacao_modernizacao_ui_ux.md  feedback_simulado_usuarios.md  health_check_summary.txt  pyproject.toml  system_summary.md
attached_assets/avara_website_modernizado/attached_assets/: INSTALL_1749550479402.md
data/: faq.json
(+181 files in other folders)
