[project]
name = "cariacica-court-website"
version = "2.0.0"
description = "Sistema web otimizado para a 2ª Vara Cível de Cariacica com arquitetura empresarial escalável, monitoramento em tempo real e recursos de IA"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "openai>=1.85.0",
    "psycopg2-binary>=2.9.10",
    "werkzeug>=3.1.3",
    "sqlalchemy>=2.0.41",
    "flask-caching>=2.3.1",
    "flask-limiter>=3.12",
    "redis>=6.2.0",
]
